# remisen-run

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  appveyor.yml
.circleci/: config.yml
cmake/: GioCodeCoverage.cmake  GioGitSubmodules.cmake  RemisenRunCodeCoverage.cmake  RemisenRunGitSubmodules.cmake
giovanni/: CMakeLists.txt
giovanni/src/: game.cpp  game.hpp  game_test.cpp  main.cpp
remisen-run/: CMakeLists.txt
remisen-run/src/: game.cpp  game.hpp  game_test.cpp  main.cpp  main_test.cpp
